[tool.poetry]
name = "nlp-courses"
version = "0.1.0"
description = ""
authors = ["Ryan Pégoud <ryanpegoud@gmail.com>"]
readme = "README.md"
packages = [{include = "nlp_courses"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.0"
numpy = "^1.25.2"
spacy = "^3.6.1"
nltk = "^3.8.1"
ruff = "^0.0.287"
isort = "^5.12.0"
black = "^23.7.0"
sklearn = "^0.0.post9"
pyspellchecker = "^0.7.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
scikit-learn = "^1.3.0"
scipy = "^1.11.2"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
